[package]
name = "luster"
version = "0.1.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT OR CC0"

[workspace]
members = [
    "./gc-arena/",
    "./gc-sequence/",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
clap = "2.32"
num-traits = "0.2"
rand = "0.6"
rand_xoshiro = "0.1"
rustc-hash = "1.0"
rustyline = "3.0"
hashbrown = { git = "https://github.com/jugglerchris/hashbrown.git", branch = "hash_next" }
gc-arena = { path = "./gc-arena" }
gc-sequence = { path = "./gc-sequence" }
